# dsutil

./: .flake8  .gitignore  .gitpod.yml  .pylintrc  README.md  pyproject.toml  readme.md
.github/workflows/: create_pull_request.yml  lint.yml  pre-release.yml  release.yml  test.yml  test_macos.yml  test_ubuntu.yml  test_windows.yml
aiutil/: __init__.py  cv.py  dataframe.py  datetime.py  filesystem.py  git.py  hash.py  jupyter.py  pdf.py  poetry.py  shell.py
aiutil/hadoop/: hdfs.py  kerberos.py  log.py  pyspark_submit.py
aiutil/notebook/: search.py  util.py
dsutil/: __init__.py  collections.py  cv.py  dataframe.py  datetime.py  docker.py  dockerhub.py  filesystem.py  git.py  hash.py  hdfs.py  jupyter.py  match_memory.py  memory.py  misc.py  pdf.py  poetry.py  shebang.py  shell.py  sql.py  text.py  url.py  utils.py
dsutil/docker/: __init__.py  builder.py  docker.py
dsutil/hadoop/: __init__.py  hdfs.py  kerberos.py  log.py  logf.py  pyspark_submit.py  pyspark_submit.yaml  repart_hdfs.py  utils.py
test/: test_docker.py
test/dsutil/dsutil/: hash.py  poetry.py
test/resources/count_by_date/: part-03368-85e28c61-159a-47e3-8a4c-0df48e7115d4-c000.csv  part-05737-85e28c61-159a-47e3-8a4c-0df48e7115d4-c000.csv  part-10619-85e28c61-159a-47e3-8a4c-0df48e7115d4-c000.csv  part-12939-85e28c61-159a-47e3-8a4c-0df48e7115d4-c000.csv  part-28360-85e28c61-159a-47e3-8a4c-0df48e7115d4-c000.csv  part-30266-85e28c61-159a-47e3-8a4c-0df48e7115d4-c000.csv  part-32423-85e28c61-159a-47e3-8a4c-0df48e7115d4-c000.csv  part-32514-85e28c61-159a-47e3-8a4c-0df48e7115d4-c000.csv  part-33494-85e28c61-159a-47e3-8a4c-0df48e7115d4-c000.csv  part-34465-85e28c61-159a-47e3-8a4c-0df48e7115d4-c000.csv  part-40776-85e28c61-159a-47e3-8a4c-0df48e7115d4-c000.csv  part-43577-85e28c61-159a-47e3-8a4c-0df48e7115d4-c000.csv  part-46025-85e28c61-159a-47e3-8a4c-0df48e7115d4-c000.csv  part-55672-85e28c61-159a-47e3-8a4c-0df48e7115d4-c000.csv  part-58065-85e28c61-159a-47e3-8a4c-0df48e7115d4-c000.csv  part-59325-85e28c61-159a-47e3-8a4c-0df48e7115d4-c000.csv  part-59698-85e28c61-159a-47e3-8a4c-0df48e7115d4-c000.csv
tests/: test_docker.py  test_poetry.py  testing.ipynb
tests/dataframe/: test_dataframe.py
tests/docker/: test_docker.py
tests/dsutil/: pyproject.toml  readme.md
tests/dsutil/dsutil/: __init__.py  collections.py  dataframe.py  datetime.py  docker.py  git.py  shell.py  text.py
tests/filesystem/: test_filesystem.py
tests/hadoop/log/: .gitignore  test_logf.py
tests/jupyter/: test_jupyter.py
tests/jupyter/notebooks/: python-argparse.html  python-moviepy.html  python-opencv-video.html  python-opencv-video.ipynb  python-pandas-construct-dataframe.html  python-requests-dockerhub.html  python-unpacking-assignment.html  work-with-long-str-in-python.html
tests/notebook/: test_util.py
tests/notebook/notebooks/: python-argparse.ipynb  python-pandas-construct-dataframe.ipynb  python-requests-dockerhub.ipynb  work-with-long-str-in-python.ipynb
tests/poetry/: test_poetry.py
tests/poetry/aiutil/: pyproject.toml
tests/poetry/dsutil/: readme.md
tests/resources/count_by_date/: part-00091-85e28c61-159a-47e3-8a4c-0df48e7115d4-c000.csv  part-03746-85e28c61-159a-47e3-8a4c-0df48e7115d4-c000.csv  part-03871-85e28c61-159a-47e3-8a4c-0df48e7115d4-c000.csv  part-05080-85e28c61-159a-47e3-8a4c-0df48e7115d4-c000.csv  part-05428-85e28c61-159a-47e3-8a4c-0df48e7115d4-c000.csv  part-06053-85e28c61-159a-47e3-8a4c-0df48e7115d4-c000.csv  part-06430-85e28c61-159a-47e3-8a4c-0df48e7115d4-c000.csv  part-07118-85e28c61-159a-47e3-8a4c-0df48e7115d4-c000.csv  part-07139-85e28c61-159a-47e3-8a4c-0df48e7115d4-c000.csv  part-07925-85e28c61-159a-47e3-8a4c-0df48e7115d4-c000.csv  part-08221-85e28c61-159a-47e3-8a4c-0df48e7115d4-c000.csv  part-09780-85e28c61-159a-47e3-8a4c-0df48e7115d4-c000.csv  part-10019-85e28c61-159a-47e3-8a4c-0df48e7115d4-c000.csv  part-12030-85e28c61-159a-47e3-8a4c-0df48e7115d4-c000.csv  part-12132-85e28c61-159a-47e3-8a4c-0df48e7115d4-c000.csv  part-12542-85e28c61-159a-47e3-8a4c-0df48e7115d4-c000.csv  part-13299-85e28c61-159a-47e3-8a4c-0df48e7115d4-c000.csv  part-13362-85e28c61-159a-47e3-8a4c-0df48e7115d4-c000.csv  (+52 more)
tests/shebang/: test_shebang.py
tests/shebang/script_dir/: script_1.py
