[tool.poetry]
name = "dsutil"
version = "0.52.1"
description = "A utils Python package for data scientists."
authors = ["Benjamin Du <longendu@yahoo.com>"]

[tool.poetry.scripts]
logf = "dsutil.hadoop:logf.main"
pyspark_submit = "dsutil.hadoop:pyspark_submit.main"
pykinit = "dsutil.hadoop:kerberos.main"
match_memory = "dsutil:memory.main"

[tool.poetry.dependencies]
python = ">=3.7.1,<3.10"
dateparser = ">=0.7.1"
pandas = ">=1.2.0"
loguru = ">=0.3.2"
toml = ">=0.10.0"
pylint = ">=2.4.0"
yapf = ">=0.28.0"
PyPDF2 = ">=1.26.0"
requests = ">=2.20.0"
pillow = ">=7.0.0"
GitPython = ">=3.0.0"
nbformat = ">=5.0.7"
notifiers = ">=1.2.1"
psutil = ">=5.7.3"
nbconvert = ">=5.6.1"
PyYAML = ">=5.3.1"
python-magic = ">=0.4.0"
pandas-profiling = ">=2.9.0"
sqlparse = ">=0.4.1"
docker = ">=4.4.0"
pathspec = "^0.8.1"
networkx = ">=2.5"
opencv-python = { version = ">=4.0.0.0", optional = true }

[tool.poetry.dev-dependencies]
pytest = ">=3.0"
pylint = ">=2.5.3"
flake8 = ">=3.8.4"
pytype = { version = ">=2020.08.10", python = "<3.9" }
darglint = ">=1.5.8"
yapf = ">=0.30.0"
pyspark = ">=3.0.1"

[build-system]
requires = ["poetry>=1.0.0"]
build-backend = "poetry.masonry.api"

[tool.poetry.extras]
cv = ["opencv-python"]