[tool.poetry]
name = "dsutil"
version = "0.53.0"
description = "A utils Python package for data scientists."
authors = ["Benjamin Du <longendu@yahoo.com>"]

[tool.poetry.scripts]
logf = "dsutil.hadoop:logf.main"
pyspark_submit = "dsutil.hadoop:pyspark_submit.main"
pykinit = "dsutil.hadoop:kerberos.main"
match_memory = "dsutil:memory.main"

[tool.poetry.dependencies]
python = ">=3.7.1,<3.10"
sqlparse = ">=0.4.1"
pathspec = "^0.8.1"
dateparser = ">=0.7.1"
numba = ">=0.53.0rc1.post1"
pandas = ">=1.2.0"
pandas-profiling = ">=2.9.0"
loguru = ">=0.3.2"
toml = ">=0.10.0"
GitPython = ">=3.0.0"
notifiers = ">=1.2.1"
PyYAML = ">=5.3.1"
python-magic = ">=0.4.0"
# admin
psutil = { version = ">=5.7.3", optional = true}
# cv
opencv-python = { version = ">=4.0.0.0", optional = true }
pillow = { version = ">=7.0.0", optional = true }
# docker
networkx = { version = ">=2.5", optional = true }
docker = { version = ">=4.4.0", optional = true }
requests = { version = ">=2.20.0", optional = true }
# pdf
PyPDF2 = { version = ">=1.26.0", optional = true }
# jupyter
nbformat = { version = ">=5.0.7", optional = true }
nbconvert = { version = ">=5.6.1", optional = true }
yapf = { version = ">=0.30.0", optional = true}

[tool.poetry.dev-dependencies]
pytest = ">=3.0"
pylint = ">=2.7.0"
flake8 = ">=3.8.4"
pytype = { version = ">=2020.08.10", python = "<3.9" }
darglint = ">=1.5.8"
yapf = ">=0.30.0"
pyspark = ">=3.0.1"

[build-system]
requires = ["poetry>=1.0.0"]
build-backend = "poetry.masonry.api"

[tool.poetry.extras]
cv = ["opencv-python", "pillow"]
docker = ["docker", "networkx", "requests"]
pdf = ["PyPDF2"]
jupyter = ["nbformat", "nbconvert", "yapf"]
admin = ["psutil"]
all = ["opencv-python", "pillow", "docker", "networkx", "requests", "PyPDF2", "nbformat", "nbconvert", "yapf", "psutil"]
